[package]
name = "encryption-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.2"
hex = "0.4.3"
uuid = {version="1.4.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]}
rand="0.8.5"